--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -282,7 +282,7 @@ Deployment metadata references code that exists in potentially diverse locations
 This separation means that your flow code stays within your storage and execution
 infrastructure.
 
-This is key to the Prefect hybrid model used with hybrid work pool types: there's a boundary between your proprietary assets,
+This is key to the Prefect hybrid model: there's a boundary between your proprietary assets,
 such as your flow code, and the Prefect backend (including [Prefect Cloud](/3.0/manage/cloud/)).
 </Note>
 
