--- a/docs/3.0/deploy/infrastructure-concepts/customize.mdx
+++ b/docs/3.0/deploy/infrastructure-concepts/customize.mdx
@@ -3,7 +3,7 @@ title: Override job variables
 description: Learn how to override job variables on a work pool for a given deployment.
 ---
 
-There are two ways to deploy flows to work pools: using a `prefect.yaml` file or using the `.deploy()` method. 
+There are two ways to deploy flows to work pools: with a []`prefect.yaml` file]() or using the Python`deploy` method. 
 In both cases, you can override job variables on a work pool for a given deployment.
 
 This guide explores common patterns for overriding job variables in 
